--- a/templates/cart/cart.html.twig
+++ b/templates/cart/cart.html.twig
@@ -48,6 +48,13 @@
                                             colorId: item.color ? item.color.id: null,
                                         }) }}"
                                         method="POST"
+                                        {{ stimulus_controller('submit-confirm', {
+                                            title: 'Remove this item?',
+                                            icon: 'warning',
+                                            confirmButtonText: 'Yes, remove it!',
+                                            submitAsync: true,
+                                        }) }}
+                                        data-action="submit-confirm#onSubmit"
                                     >
                                         <input type="hidden" name="_token" value="{{ csrf_token('remove_item') }}" />
 
