--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -101,6 +101,12 @@
 
             <div class="col-10 mt-4">
                 <h1>Admin Dashboard</h1>
+                <div>
+                    {{ render_chart(chart, {
+                        'data-controller': 'admin-chartjs',
+                        'data-action': 'chartjs:connect->admin-chartjs#onChartConnect'
+                    }) }}
+                </div>
             </div>
         </div>
     </div>
