--- a/templates/cart/cart.html.twig
+++ b/templates/cart/cart.html.twig
@@ -13,7 +13,7 @@
                 <h1>Shopping Cart</h1>
                 <div
                     class="component-light p-3"
-                    {{ stimulus_controller('cart-list', { cartRefreshUrl: path('_app_cart_list')}) }}
+                    {{ stimulus_controller('reload-content', { url: path('_app_cart_list')}) }}
                 >
                     {{ include('cart/_cart-list.html.twig') }}
                 </div>
