--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -150,3 +150,12 @@ h1 {
 .modal-body button {
     display: none;
 }
+.fade-enter-active, .fade-leave-active {
+    transition: opacity 500ms;
+}
+.fade-enter-from, .fade-leave-to {
+    opacity: 0;
+}
+.fade-enter-to, .fade-leave-from {
+    opacity: 1;
+}
