--- a/templates/product/_searchPreview.html.twig
+++ b/templates/product/_searchPreview.html.twig
@@ -3,6 +3,7 @@
         <a
             class="list-group-item list-group-item-action"
             href="{{ path('app_product', {id: product.id}) }}"
+            role="option"
         >
                 <div class="d-flex align-items-center justify-content-between">
                         <div>
@@ -17,6 +18,6 @@
                 </div>
         </a>
         {% else %}
-        <div class="list-group-item">No results found :(</div>
+        <div class="list-group-item" role="option" aria-disabled="true">No results found :(</div>
     {% endfor %}
 </div>
